--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -6,8 +6,8 @@
 name: Dart
 
 on:
-  push:
-    branches: [ "development" ]
+#   push:
+#     branches: [ "development" ]
   pull_request:
     branches: [ "main" ]
 
