--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,15 +15,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+#     - uses: actions/setup-java@v1
+#       with:
+#         java-version: '12.x'
+    - uses: subosito/flutter-action@v2
       with:
-        java-version: '12.x'
-    - uses: subosito/flutter-action@v1
-      with:
-        channel: 'dev'
-    - name: 'Run flutter pub get'
-      run: flutter pub get
+        flutter-version: '3.7.3'
+#     - name: 'Run flutter pub get'
+#       run: flutter pub get
 #    - name: 'Run Test(s)'
 #      run: flutter test
     - name: Enable flutter web
